[Java. Decompiler] Recover partial obfuscated decompilation